# yore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/workflows/: nix.yml
benches/: benchmarks.rs
benchmark/: Cargo.toml  README.md
benchmark/benches/: benchmarks.rs
codegen/: Cargo.toml
codegen/src/: codegen_helper.rs  complete_coder.rs  incomplete_coder.rs  main.rs  parsers.rs  rfc1345.rs
codegen/src/codegen_helper/: decoder.rs  encoder.rs
codegen/src/codegen_helper/templates/: complete.rs  incomplete.rs
codegen/tables/unicode.org/: CP910.txt
dev/bench/: data.js
fuzz/: Cargo.toml  flake.nix
fuzz/fuzz_targets/: invariant.rs  validate.rs
src/: decoder.rs  encoder.rs  internal.rs  lib.rs  simd.rs
src/code_pages/: cp037.rs  cp1140.rs  cp1250.rs  cp1251.rs  cp1252.rs  cp1253.rs  cp1254.rs  cp1255.rs  cp1256.rs  cp1257.rs  cp1258.rs  cp437.rs  cp737.rs  cp850.rs  cp852.rs  cp855.rs  cp857.rs  cp860.rs  cp861.rs  cp862.rs  cp863.rs  cp864.rs  cp865.rs  cp866.rs  cp869.rs  cp874.rs  cp910.rs  mod.rs
src/decoder/: complete.rs  incomplete.rs
src/internal/: decoder_complete.rs  decoder_incomplete.rs  mod.rs
