[package]
name = "yore"
version = "1.2.0"
authors = ["Andreas Liljeqvist <bonega@gmail.com>"]
edition = "2021"
categories = ["encoding"]
keywords = ["encoding", "charset"]
license = "MIT"
description = "Rust library for decoding/encoding character sets according to OEM code pages"
repository = "https://github.com/bonega/yore/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.25"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.4"
rand_pcg = "0.3.1"
