[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dev-dependencies]
yore = {path= ".."}
criterion = "0.3.4"
encoding = "0.2.33"
oem_cp = "1.1.0"

[[bench]]
name = "benchmarks"
harness = false
