[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dev-dependencies]
yore = {path= ".."}
criterion = "0.3.4"
oem_cp = "1.1.0"
encoding_rs = {version = "0.8.28", features = ["simd-accel"]}
rand = "0.8.4"
rand_pcg = "0.3.1"

[[bench]]
name = "benchmarks"
harness = false

[lib]
bench = false